Linked all pages to the shopping basket

--- a/kids-shoes.html
+++ b/kids-shoes.html
@@ -57,7 +57,7 @@
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart-btn" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
+                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -71,20 +71,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys Shoes</h2>
-              <span class="price">£ 31.00</span>
+              <span class="price">£31.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-shoes.jpg" class="product-img" alt="">
+              <img src="images/boys-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-shoes.jpg" alt="">
+                  <img src="images/boys-shoes.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Boys Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 31.00</span>
+                  <span class="price">£31.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -94,20 +94,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys Shoes</h2>
-              <span class="price">£ 25.99</span>
+              <span class="price">£25.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-shoes1.jpg" class="product-img" alt="">
+              <img src="images/boys-shoes1.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-shoes1.jpg" alt="">
+                  <img src="images/boys-shoes1.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Boys Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 25.99</span>
+                  <span class="price">£25.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -117,20 +117,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys Shoes</h2>
-              <span class="price">£ 40.00</span>
+              <span class="price">£40.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-shoes2.jpg" class="product-img" alt="">
+              <img src="images/boys-shoes2.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-shoes2.jpg" alt="">
+                  <img src="images/boys-shoes2.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Boys Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 40.00</span>
+                  <span class="price">£40.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -140,20 +140,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls Shoes</h2>
-              <span class="price">£ 50.00</span>
+              <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-shoes.jpg" class="product-img" alt="">
+              <img src="images/girls-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/girls-shoes.jpg" alt="">
+                  <img src="images/girls-shoes.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Girls Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 50.00</span>
+                  <span class="price">£50.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -163,15 +163,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls Shoes</h2>
-              <span class="price">£ 55.00</span>
+              <span class="price">£55.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-shoes1.jpg" class="product-img" alt="">
+              <img src="images/girls-shoes1.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/girls-shoes1.jpg" alt="">
+                  <img src="images/girls-shoes1.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Girls Shoes<br><span>Foot wear</span></h2>
@@ -186,20 +186,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls Shoes</h2>
-              <span class="price">£ 28.00</span>
+              <span class="price">£28.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-shoes2.jpg" class="product-img" alt="">
+              <img src="images/girls-shoes2.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/girls-shoes2.jpg" alt="">
+                  <img src="images/girls-shoes2.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Girls Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 28.00</span>
+                  <span class="price">£28.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
