--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart-btn" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
+                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -70,7 +70,7 @@
 
         </header>
         <br>
-        <!--<div class="slideshow-container">
+        <div class="slideshow-container">
 
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
@@ -98,7 +98,7 @@
             <span class="dot"></span> 
             <span class="dot"></span> 
           </div>
-        <script src="js/slides.js"></script>-->
+        <script src="js/slides.js"></script>
     </body>
 
     </html>
