--- a/women-shoes.html
+++ b/women-shoes.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
        
 
-        <script type="text/javascript" src="js/LocalLogin.js"></script>
+        <!--<script type="text/javascript" src="js/LocalLogin.js"></script>-->
 
     </head>
 
@@ -57,7 +57,7 @@
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart-btn" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
+                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
