some of the pics have been replaced.

--- a/women.html
+++ b/women.html
@@ -15,13 +15,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
        
 
-        <script type="text/javascript" src="js/LocalLogin.js"></script>
+        <!--<script type="text/javascript" src="js/LocalLogin.js"></script>-->
 
     </head>
 
     <body class="responsive">
       
-        <script src="css/app.js"></script>
+        <!--<script src="css/app.js"></script>-->
         <header>
             <div class="your-fashion-text-box">
                 <a href="index.html" class="shopname">Your Fashion</a> 
@@ -70,16 +70,16 @@
         <div class="container">
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women blouse</h2>
+              <h2 class="name">Blue blouse</h2>
               <span class="price">£ 59.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-blouse.webp" class="product-img" alt="">
+              <img src="https://peacocks.imgix.net/media/imagery/2/0/7/5/6/1_75adccf069ea5a2/207561pls_ee4d8736435c6a4.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-blouse.webp" alt="">
+                  <img src="https://peacocks.imgix.net/media/imagery/2/0/7/5/6/1_75adccf069ea5a2/207561pls_ee4d8736435c6a4.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
@@ -93,16 +93,16 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women blouse</h2>
+              <h2 class="name">Off White blouse</h2>
               <span class="price">£ 73.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-blouse1.webp" class="product-img" alt="">
+              <img src="https://www.marie-claire.com/cdn/shop/files/498765525638-01.jpg?v=1693493574&width=720" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-blouse1.webp" alt="">
+                  <img src="https://www.marie-claire.com/cdn/shop/files/498765525638-01.jpg?v=1693493574&width=720" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
@@ -116,16 +116,16 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women blouse</h2>
+              <h2 class="name">White blouse</h2>
               <span class="price">£ 89.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-blouse2.jpg" class="product-img" alt="">
+              <img src="https://m.media-amazon.com/images/I/61GDvPjdmtL.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-blouse2.jpg" alt="">
+                  <img src="https://m.media-amazon.com/images/I/61GDvPjdmtL.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
@@ -139,16 +139,16 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women trouser</h2>
+              <h2 class="name">Brown trouser</h2>
               <span class="price">£ 140.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-trouser.jpg" class="product-img" alt="">
+              <img src="https://m.media-amazon.com/images/I/61+0NJn8oyL._AC_UF894,1000_QL80_.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-trouser.jpg" alt="">
+                  <img src="https://m.media-amazon.com/images/I/61+0NJn8oyL._AC_UF894,1000_QL80_.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
@@ -162,16 +162,16 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women trouser</h2>
+              <h2 class="name">Cream trouser</h2>
               <span class="price">£ 59.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-blouse1.webp" class="product-img" alt="">
+              <img src="https://m.media-amazon.com/images/I/61E3wB99TIL._AC_UY580_.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-blouse1.webp" alt="">
+                  <img src="https://m.media-amazon.com/images/I/61E3wB99TIL._AC_UY580_.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
@@ -185,16 +185,16 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Women trouser</h2>
+              <h2 class="name">Grey trouser</h2>
               <span class="price">£ 201.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-trouser2.jpg" class="product-img" alt="">
+              <img src="https://imagescdn.planetfashion.in/img/app/product/7/738426-8259061.jpg?auto=format" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-trouser2.jpg" alt="">
+                  <img src="https://imagescdn.planetfashion.in/img/app/product/7/738426-8259061.jpg?auto=format" alt="">
                 </div>
                 <div class="info">
                   <h2>Women clothes<br><span>Women's wear</span></h2>
