--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
        
 
-        <script type="text/javascript" src="js/LocalLogin.js"></script>
+        <!--<script type="text/javascript" src="js/LocalLogin.js"></script>-->
 
     </head>
 
     <body class="responsive">
       
-        <script src="css/app.js"></script>
+        <!--<script src="css/app.js"></script>-->
         <header>
             <div class="your-fashion-text-box">
                 <a href="index.html" class="shopname">Your Fashion</a> 
@@ -70,7 +70,26 @@
 
         </header>
         <br>
-        <div class="slideshow-container">
+
+        <div class="scene">
+          <div class="carousel">
+            <div class="carousel__cell">1</div>
+            <div class="carousel__cell">2</div>
+            <div class="carousel__cell">3</div>
+            <div class="carousel__cell">4</div>
+            <div class="carousel__cell">5</div>
+            <div class="carousel__cell">6</div>
+            <div class="carousel__cell">7</div>
+            <div class="carousel__cell">8</div>
+            <div class="carousel__cell">9</div>
+          </div>
+        </div>
+        <p style="text-align: center;">
+          <button class="previous-button">Previous</button>
+          <button class="next-button">Next</button>
+        </p>
+
+        <!--<div class="slideshow-container">
 
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
@@ -97,7 +116,7 @@
             <span class="dot"></span> 
             <span class="dot"></span> 
             <span class="dot"></span> 
-          </div>
+          </div>-->
         <script src="js/slides.js"></script>
     </body>
 
