--- a/cart.html
+++ b/cart.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-    <html>
+<doctype! html>
+    <html lang="en" charset="UTF-8">
 
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <title>Your Fashion</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
+        <!--<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         
@@ -78,12 +78,20 @@
             <h5 class="quantity">QUANTITY</h5>
             <h5 class="total">TOTAL</h5>
           </div>
-          <div class="prods">
-
-          </div>
+          <div class="prods"></div>
+          <div id="container"></div>
         </div>
 
         <script src="js/shopping-basket.js"></script>
+       <script src="js/payment.js"></script>
+
+      <!-- <div id="container"></div>-->
+
+      <script async
+      src="https://pay.google.com/gp/p/js/pay.js"
+      onload="onGooglePayLoaded()"></script>
+
+
     </body>
 
     </html>
