edited the diary file

--- a/women-shoes.html
+++ b/women-shoes.html
@@ -71,20 +71,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 47.99</span>
+              <span class="price">£47.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes.jpg" class="product-img" alt="">
+              <img src="images/women-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes.jpg" alt="">
+                  <img src="images/women-shoes.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 47.99</span>
+                  <span class="price">£47.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -94,20 +94,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 87.00</span>
+              <span class="price">£87.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes1.jpeg" class="product-img" alt="">
+              <img src="images/women-shoes1.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes1.jpeg" alt="">
+                  <img src="images/women-shoes1.jpeg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 87.00</span>
+                  <span class="price">£87.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -117,20 +117,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 89.00</span>
+              <span class="price">£89.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes2.webp" class="product-img" alt="">
+              <img src="images/women-shoes2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes2.webp" alt="">
+                  <img src="images/women-shoes2.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 89.00</span>
+                  <span class="price">£89.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -140,15 +140,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 119.00</span>
+              <span class="price">£119.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes3.jpg" class="product-img" alt="">
+              <img src="images/women-shoes3.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes3.jpg" alt="">
+                  <img src="images/women-shoes3.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -163,15 +163,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 52.00</span>
+              <span class="price">£52.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes4.jpeg" class="product-img" alt="">
+              <img src="images/women-shoes4.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes4.jpeg" alt="">
+                  <img src="images/women-shoes4.jpeg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -188,13 +188,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£ 60.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/women-shoes5.webp" class="product-img" alt="">
+              <img src="images/women-shoes5.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/women-shoes5.webp" alt="">
+                  <img src="images/women-shoes5.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
