--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             <span class="dot"></span> 
           </div>-->
         <script src="js/slides.js"></script>
+        <script src="js/shopping-basket.js"></script>
+
     </body>
 
     </html>
