--- a/kids.html
+++ b/kids.html
@@ -73,13 +73,13 @@
               <h2 class="name">Girls dress</h2>
               <span class="price">£ 64.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-dress.jpg" class="product-img" alt="">
+              <img src="images/girls-dress.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/girls-dress.jpg" alt="">
+                  <img src="images/girls-dress.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -96,13 +96,13 @@
               <h2 class="name">Girls dress</h2>
               <span class="price">£ 57.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-dress1.webp" class="product-img" alt="">
+              <img src="images/girls-dress1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/girls-dress1.webp" alt="">
+                  <img src="images/girls-dress1.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -117,9 +117,9 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls dress</h2>
-              <span class="price">£ 89.99</span>
+              <span class="price">£89.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/girls-dress2.webp" class="product-img" alt="">
+              <img src="images/girls-dress2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
@@ -130,7 +130,7 @@
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 89.99</span>
+                  <span class="price">£89.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -140,15 +140,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys jumper</h2>
-              <span class="price">£ 80.00</span>
+              <span class="price">£80.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-jumper.avif" class="product-img" alt="">
+              <img src="images/boys-jumper.avif" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-jumper.avif" alt="">
+                  <img src="images/boys-jumper.avif" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -163,15 +163,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys jumper</h2>
-              <span class="price">£ 50.00</span>
+              <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-jumper1.webp" class="product-img" alt="">
+              <img src="images/boys-jumper1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-jumper1.webp" alt="">
+                  <img src="images/boys-jumper1.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -186,15 +186,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Boys jumper</h2>
-              <span class="price">£ 70.00</span>
+              <span class="price">£70.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/boys-jumper2.webp" class="product-img" alt="">
+              <img src="images/boys-jumper2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/boys-jumper2.webp" alt="">
+                  <img src="images/boys-jumper2.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
