--- a/men-shoes.html
+++ b/men-shoes.html
@@ -71,20 +71,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
-              <span class="price">£ 60.00</span>
+              <span class="price">£60.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes.jpg" class="product-img" alt="">
+              <img src="images/men-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes.jpg" alt="">
+                  <img src="images/men-shoes.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 60.00</span>
+                  <span class="price">£60.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -94,20 +94,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
-              <span class="price">£ 73.99</span>
+              <span class="price">£73.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes1.jpg" class="product-img" alt="">
+              <img src="images/men-shoes1.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes1.jpg" alt="">
+                  <img src="images/men-shoes1.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 73.99</span>
+                  <span class="price">£73.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -117,20 +117,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
-              <span class="price">£ 89.00</span>
+              <span class="price">£89.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes2.jpg" class="product-img" alt="">
+              <img src="images/men-shoes2.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes2.jpg" alt="">
+                  <img src="images/men-shoes2.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 89.00</span>
+                  <span class="price">£89.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -140,15 +140,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
-              <span class="price">£ 50.00</span>
+              <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes3.webp" class="product-img" alt="">
+              <img src="images/men-shoes3.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes3.webp" alt="">
+                  <img src="images/men-shoes3.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
@@ -163,15 +163,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
-              <span class="price">£ 50.00</span>
+              <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes4.jpg" class="product-img" alt="">
+              <img src="images/men-shoes4.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes4.jpg" alt="">
+                  <img src="images/men-shoes4.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
@@ -188,13 +188,13 @@
               <h2 class="name">Men jeans</h2>
               <span class="price">£100.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shoes5.jpg" class="product-img" alt="">
+              <img src="images/men-shoes5.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shoes5.jpg" alt="">
+                  <img src="images/men-shoes5.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Men Shoes<br><span>Foot wear</span></h2>
