making progress with the payment function

--- a/cart.html
+++ b/cart.html
@@ -82,6 +82,8 @@
           <div class="prods"></div>
           <div id="container"></div>
         </div>
+        <a id="buy-now" href="#">Buy Now</a>
+        
 
 
 
