payment function is completed.

--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,5 @@
-<doctype! html>
+<DOCTYPE! html>
+
     <html lang="en" charset="UTF-8">
 
     <head>
@@ -82,7 +83,7 @@
           <div class="prods"></div>
           <div id="container"></div>
         </div>
-        <a id="buy-now" href="#">Buy Now</a>
+        <div id="buy-now">Buy Now</div>
         
 
 
