seach functionality is done but un tested(DBMS has to be implemented first)

--- a/cart.html
+++ b/cart.html
@@ -67,7 +67,7 @@
                 </div>
               </nav>
               <div class="search-bar">
-                <input type="search" placeholder="" >
+                <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container" autocomplete="off"/>
                 
             </div>
 
@@ -93,7 +93,7 @@
       <script async
       src="https://pay.google.com/gp/p/js/pay.js"
       onload="onGooglePayLoaded()"></script>
-
+      <script src="js/search.js"></script>
 
     </body>
 
