--- a/men.html
+++ b/men.html
@@ -62,7 +62,7 @@
                 </div>
               </nav>
               <div class="search-bar">
-                <input type="search" placeholder="" >
+                <input class="search" type="search" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container" autocomplete="off"/>
                 
             </div>
 
@@ -212,6 +212,7 @@
 
       
         <script src="js/product-cards.js"></script>
+        <script src="js/search.js"></script>
         <script src="js/shopping-basket.js"></script>
     </body>
 
