--- a/women.html
+++ b/women.html
@@ -61,7 +61,7 @@
                 </div>
               </nav>
               <div class="search-bar">
-                <input type="search" placeholder="" >
+                <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container" autocomplete="off"/>
                 
             </div>
 
@@ -211,6 +211,7 @@
 
         <script src="js/product-cards.js"></script>
         <script src="js/shopping-basket.js"></script>
+        <script src="js/search.js"></script>
     </body>
 
     </html>
