--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
 
 
       <!-- <div id="container"></div>-->
-
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
       <script async
       src="https://pay.google.com/gp/p/js/pay.js"
       onload="onGooglePayLoaded()"></script>
